# 02322-project-2

./: CMakeLists.txt  card.c  card.h  cards.c  cards.h  deck.c  deck.h  game.c  game.h  gui.cpp  main.c  stack.c  stack.h  view.c  view.cpp
